<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.HomeActivity"
    android:orientation="vertical"
    tools:ignore="RtlCompat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/txt_fav_product"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/button_background_major"
                    android:textColor="@color/white"
                    android:text="@string/fav_product"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:id="@+id/txt_fav_user"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/major"
                    android:text="@string/fav_user"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <GridView
                android:id="@+id/grid_fav_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="2"
                android:horizontalSpacing="5dp"
                android:verticalSpacing="5dp"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:id="@+id/menu_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/darkgray"
                android:src="@drawable/home"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_home"
                android:textColor="@color/darkgray"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_fav"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/major"
                android:src="@drawable/like"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_favorite"
                android:textColor="@color/major"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/darkgray"
                android:src="@drawable/add"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_upload"
                android:textColor="@color/darkgray"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_inbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/darkgray"
                android:src="@drawable/inbox"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_inbox"
                android:textColor="@color/darkgray"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_you"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:tint="@color/darkgray"
                android:src="@drawable/profile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_you"
                android:textColor="@color/darkgray"
                android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>