<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/major"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    tools:ignore="RtlCompat" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_50sdp">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            xmlns:app="http://schemas.android.com/apk/res-auto">
            <LinearLayout
                android:id="@+id/list_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_background_major">

            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:background="#00ffffff"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:hint="@string/login_username"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_background_major">

            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000"
                android:background="#00ffffff"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:hint="@string/login_password"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="textEnd"
            android:gravity="center_horizontal"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/major"
            android:background="@drawable/button_background_light_major"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/login_signin"/>
        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>


    </LinearLayout>

</LinearLayout>