<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".you.SetBadgeActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vende más rápido ahora"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textColor="@color/major"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/recomend"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/txt_7day"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/button_background_major"
            android:textColor="@color/white"
            android:text="@string/pay_7day"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/txt_15day"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/button_background_light_major"
            android:textColor="@color/major"
            android:text="@string/pay_15day"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/txt_30day"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/button_background_light_major"
            android:textColor="@color/major"
            android:text="@string/pay_30day"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_background_major"
        android:textColor="@color/white"
        android:text="Destácalo ya por 7,99"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_background_major"
        android:textColor="@color/white"
        android:text="Cancel"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>